raw-manifests/local-production/k8sdashboard/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: k8s-dashboard-vs
  namespace: istio-system
spec:
  hosts:
    - "dashboard.prod.local"
  gateways:
    - istio-ingressgateway-production
  http:
    - match:
        - uri:
            prefix: /api/
      route:
        - destination:
            host: kubernetes-dashboard-production-api.kubernetes-dashboard.svc.cluster.local
            port:
              number: 8000

    - match:
        - uri:
            prefix: /auth/
      route:
        - destination:
            host: kubernetes-dashboard-production-auth.kubernetes-dashboard.svc.cluster.local
            port:
              number: 8000

    - match:
        - uri:
            prefix: /metrics/
      route:
        - destination:
            host: kubernetes-dashboard-production-metrics-scraper.kubernetes-dashboard.svc.cluster.local
            port:
              number: 8000

    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kubernetes-dashboard-production-web.kubernetes-dashboard.svc.cluster.local
            port:
              number: 8000
